--- a/app/styles/sass/_layout.scss
+++ b/app/styles/sass/_layout.scss
@@ -1,15 +1,84 @@
+$color-1: #505658;
+$color-2: #796555;
+$color-3: #C98B5F;
+$color-4: #75807C;
+$color-5: #A0574A;
+
 html{
 
 }
 body{
+  font-weight: lighter;
+  font-family: helvetica;
 
+  h1{
+    font-size: 36px;
+    margin: 10px 0;
+  }
 }
 .container{
   padding: 20px;
+  margin-left: 125px;
+  margin-top: 5px;
 }
 .header{
+  position: absolute;
+  top: 0;
+  left: 125px;
+  right: 0;
+  height: 5px;
+  background-color: $color-5;
+  color: white;
+  font-size: 5px;
+  line-height: 5px;
 
+  span{
+    margin-left: 20px;
+  }
 }
 .left-nav{
-  
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 125px;
+  overflow: hidden;
+
+  .nav-item{
+    width: 125px;
+    display: inline-block;
+    height: 125px;
+    color: white;
+    line-height: 125px;
+    text-align: center;
+    -webkit-user-select: none;
+
+    &:hover{
+      color: black;
+      cursor: pointer;
+    }
+
+    &:nth-child(1){
+      img{
+        max-width:125px;
+      }
+    }
+
+    &:nth-child(2){
+      background-color: $color-1;
+      margin-top: -3px;
+    }
+    &:nth-child(3){
+          background-color: $color-2;
+    }
+    &:nth-child(4){
+      background-color: $color-3;
+    }    
+    &:nth-child(5){
+      background-color: $color-4;
+    }    
+    &:nth-child(6){
+      background-color: $color-5;
+    }
+  }
 }
