--- a/app/styles/sass/_layout.scss
+++ b/app/styles/sass/_layout.scss
@@ -4,6 +4,10 @@ $color-3: #C98B5F;
 $color-4: #75807C;
 $color-5: #A0574A;
 
+.margin-right-small{
+  margin-right: 5px;
+}
+
 html{
 
 }
@@ -43,6 +47,7 @@ body{
   bottom: 0;
   width: 125px;
   overflow: hidden;
+  background-color: $color-1;
 
   .nav-item{
     width: 125px;
@@ -67,18 +72,34 @@ body{
     &:nth-child(2){
       background-color: $color-1;
       margin-top: -3px;
+
+      &:hover{
+        background-color: lighten($color-1, 3%);
+      }
     }
     &:nth-child(3){
-          background-color: $color-2;
+      background-color: $color-2;
+      &:hover{
+        background-color: lighten($color-2, 3%);
+      }
     }
     &:nth-child(4){
       background-color: $color-3;
+      &:hover{
+        background-color: lighten($color-3, 3%);
+      }
     }    
     &:nth-child(5){
       background-color: $color-4;
+      &:hover{
+        background-color: lighten($color-4, 3%);
+      }
     }    
     &:nth-child(6){
       background-color: $color-5;
+      &:hover{
+        background-color: lighten($color-5, 3%);
+      }
     }
   }
 }
