all funned out for the night. games over

--- a/app/styles/sass/_layout.scss
+++ b/app/styles/sass/_layout.scss
@@ -20,6 +20,14 @@ body{
     margin: 10px 0;
   }
 }
+
+#taTextElement{
+  min-width: 300px;
+  min-height: 50px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-top: 10px;
+}
 .container{
   padding: 20px;
   margin-left: 125px;
