--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,6 +8,13 @@ body {
     font-size: 36px;
     margin: 10px 0; }
 
+#taTextElement {
+  min-width: 300px;
+  min-height: 50px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-top: 10px; }
+
 .container {
   padding: 20px;
   margin-left: 125px;
