--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,9 +1,13 @@
 .margin-right-small {
   margin-right: 5px; }
 
+html {
+  height: 100%; }
+
 body {
   font-weight: lighter;
-  font-family: helvetica; }
+  font-family: helvetica;
+  min-height: 100%; }
   body h1 {
     font-size: 36px;
     margin: 10px 0; }
@@ -34,13 +38,14 @@ body {
     margin-left: 20px; }
 
 .left-nav {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
+  position: fixed;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
   width: 125px;
-  overflow: hidden;
-  background-color: #505658; }
+  background-color: #505658;
+  /*I hate this but need it until responsive*/
+  overflow: auto; }
   .left-nav .nav-item {
     width: 125px;
     display: inline-block;
@@ -80,3 +85,18 @@ body {
   color: #505658; }
   .blog h1 {
     color: #796555; }
+  .blog .post {
+    margin-bottom: 30px; }
+
+.post-comments {
+  margin-top: 15px;
+  margin-left: 10px; }
+  .post-comments input {
+    margin-left: 3px;
+    width: 87%; }
+  .post-comments .comment {
+    width: 90%; }
+    .post-comments .comment .comment-date {
+      float: right; }
+    .post-comments .comment .comment-poster {
+      font-weight: bold; }
