mostly admin features. Lots of bugs, but almost MVP level

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -143,3 +143,9 @@ body {
     .post-comments .comment .comment-poster {
       font-weight: bold;
       color: #505658; }
+
+h1 {
+  color: #796555; }
+
+h2 {
+  color: #796555; }
