setting a max width on pages. Horrible without it

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -150,7 +150,8 @@ body {
   .blog h1 {
     color: #796555; }
   .blog .post {
-    margin-bottom: 30px; }
+    margin-bottom: 30px;
+    max-width: 600px; }
     .blog .post img {
       max-width: 95%; }
 
@@ -205,40 +206,42 @@ h1 {
 h2 {
   color: #796555; }
 
-.project .project-link {
-  margin-top: 20px;
-  color: #75807c; }
-  .project .project-link .visit-this {
-    padding-right: 10px; }
-  .project .project-link a {
-    text-decoration: none;
-    color: #505658; }
-.project .status .current-goal-status .percent {
-  font-weight: bold;
-  font-size: 34px;
-  vertical-align: middle; }
-.project .updates .update {
-  margin: 20px 0;
-  line-height: 24px; }
-  .project .updates .update .update-text {
-    max-width: 82%;
-    width: 82%;
-    display: inline-block; }
-    .project .updates .update .update-text .fa-quote-left {
-      font-size: 24px;
-      padding-right: 5px;
-      color: #505658; }
-    .project .updates .update .update-text .fa-quote-right {
-      font-size: 24px;
-      padding-left: 5px;
-      color: #505658; }
-  .project .updates .update .update-date {
-    font-size: 12px;
-    display: inline-block;
-    width: 15%;
-    vertical-align: top;
-    text-align: right;
+.project {
+  max-width: 600px; }
+  .project .project-link {
+    margin-top: 20px;
     color: #75807c; }
+    .project .project-link .visit-this {
+      padding-right: 10px; }
+    .project .project-link a {
+      text-decoration: none;
+      color: #505658; }
+  .project .status .current-goal-status .percent {
+    font-weight: bold;
+    font-size: 34px;
+    vertical-align: middle; }
+  .project .updates .update {
+    margin: 20px 0;
+    line-height: 24px; }
+    .project .updates .update .update-text {
+      max-width: 82%;
+      width: 82%;
+      display: inline-block; }
+      .project .updates .update .update-text .fa-quote-left {
+        font-size: 24px;
+        padding-right: 5px;
+        color: #505658; }
+      .project .updates .update .update-text .fa-quote-right {
+        font-size: 24px;
+        padding-left: 5px;
+        color: #505658; }
+    .project .updates .update .update-date {
+      font-size: 12px;
+      display: inline-block;
+      width: 15%;
+      vertical-align: top;
+      text-align: right;
+      color: #75807c; }
 
 .file {
   text-align: center;
